--- a/fonts.css
+++ b/fonts.css
@@ -5,8 +5,8 @@
 /* Futura Wolves Autocaps - Minnesota Timberwolves */
 @font-face {
   font-family: 'Futura Wolves Autocaps';
-  src: url('./fonts/futura_wolves_autocaps-extra_bold_oblique-webfont.woff2') format('woff2'),
-       url('./fonts/futura-wolves-autocaps-extrabold-woff.woff') format('woff');
+  src: url('https://diet-air-ds.vercel.app/fonts/futura_wolves_autocaps-extra_bold_oblique-webfont.woff2') format('woff2'),
+       url('https://diet-air-ds.vercel.app/fonts/futura-wolves-autocaps-extrabold-woff.woff') format('woff');
   font-weight: 800;
   font-style: oblique;
   font-display: swap;
