--- a/fonts.css
+++ b/fonts.css
@@ -10,7 +10,7 @@
   src: url('https://diet-air-ds.vercel.app/fonts/futura_wolves_autocaps-extra_bold.woff2') format('woff2'),
        url('https://diet-air-ds.vercel.app/fonts/futura_wolves-autocaps-extra_bold.woff') format('woff');
   font-weight: 800;
-  font-style: oblique;
+  font-style: normal;
   font-display: swap;
 }
 
